Add SlackMessenger call

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["lynxlevin <72173230+lynxlevin@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+requests = "^2.31.0"
 
 [tool.poetry.dev-dependencies]
 
