--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["lynxlevin <72173230+lynxlevin@users.noreply.github.com>"]
 python = "^3.9"
 python-dotenv = "^1.0.1"
 requests = "^2.28.1"
+urllib3 = "^1.26.9"
 
 [tool.poetry.dev-dependencies]
 
